# software-factory

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md
docs/: CMakeLists.txt  aspell.en.pws  check_spelling.sh  conf.py.in  index.rst  spelling_wordlist.txt  swf-substitutions.txt
docs/categories/: howto.rst  process.rst
docs/chapters/architecture/: SOTA-client.rst  SOTA-system.rst  index.rst
docs/chapters/architecture/DLT/: diagnostics-log-and-tracing.rst  index.rst
docs/chapters/architecture/Lifecycle/: index.rst
docs/chapters/architecture/SOTA/: SOTA-system.rst  getting-started-SOTA.rst  index.rst  vert-config-SOTA.rst
docs/chapters/architecture/SWC/: index.rst
docs/chapters/architecture/subsystems/: index.rst
docs/chapters/architecture/subsystems/SOTA/: SOTA-system.rst  getting-started-SOTA.rst  index.rst
docs/chapters/architecture/subsystems/SWC/: getting-started-SWC.rst  index.rst  software-container.rst
docs/chapters/baseplatform/: booting-on-target-hardware.rst  building-PELUX-sources.rst  creating-a-manifest.rst  creating-a-new-layer.rst  creating-sdk.rst  deploying-and-booting-the-image.rst  deploying-the-image.rst  index.rst  obtaining-a-PELUX-release.rst  prerequisites.rst  replacing-packagegroups.rst  using-the-repo-tool.rst
docs/chapters/baseplatform/snippets/: bitbake.sh  curl.sh  export.sh  repo-init.sh  repo-source.sh
docs/chapters/baseplatform/unused_snippets/: manifest.xml
docs/chapters/ci-and-cd/: index.rst  pelux-ci-cd-jobs.rst  setting-up-automated-testing-yocto.rst
docs/chapters/getting-started/: development-workflow.rst  hardware-setup.rst  index.rst  try-it-out.rst
docs/chapters/intro/: index.rst
docs/chapters/licensing/: index.rst
docs/chapters/oso/: checklist-for-peer-reviewing-repository-requirements.rst  index.rst
docs/chapters/sde/: index.rst
docs/chapters/sdk/: directory-structure.rst  index.rst  installing-the-sdk.rst  run-binary-on-target.rst  template-service.rst  using-the-sdk-to-crosscompile.rst
docs/chapters/swupdate/: getting-started-SOTA.rst  index.rst
docs/chapters/workflow/: git-workflow.rst  index.rst  release-process.rst
docs/chapters/workflow/git/: github-tips-and-tricks.rst  index.rst
docs/chapters/workflow/release/: howto-release-pelux.rst  index.rst  release-process.rst
docs/cmake_modules/: FindSphinx.cmake
scripts/: Jenkinsfile-blueprint  Jenkinsfile-deploy  publish_docs.sh
