# This file is part of the Software Factory project
# Copyright (C) Pelagicore AB
# SPDX-License_identifier: LGPL-2.1
# This file is subject to the terms of the LGPL-2.1 license.
# Please see the LICENSE file for details.

cmake_minimum_required(VERSION 3.0.2)

project("PELUX Development Handbook"
        VERSION 3.0
        LANGUAGES NONE
)

add_subdirectory(docs)
